extract executing of queries in special class + add property file